include/psyc/parse.h


typedef enum {
    PSYC_PARSE_ALL = 0,
    PSYC_PARSE_ROUTING_ONLY = 1,
    PSYC_PARSE_START_AT_CONTENT = 2,
} PsycParseFlag;
typedef enum {
    PSYC_PARSE_ERROR_MOD_NO_LEN = -10,
    PSYC_PARSE_ERROR_NO_LEN = -9,
    PSYC_PARSE_ERROR_END = -8,
    PSYC_PARSE_ERROR_METHOD = -7,
    PSYC_PARSE_ERROR_MOD_NL = -6,
    PSYC_PARSE_ERROR_MOD_LEN = -5,
    PSYC_PARSE_ERROR_MOD_TAB = -4,
    PSYC_PARSE_ERROR_MOD_NAME = -3,
    PSYC_PARSE_ERROR_LENGTH = -2,
    PSYC_PARSE_ERROR = -1,
    PSYC_PARSE_INSUFFICIENT = 1,
    PSYC_PARSE_ROUTING = 2,
    PSYC_PARSE_STATE_RESYNC = 3,
    PSYC_PARSE_STATE_RESET = 4,
    PSYC_PARSE_ENTITY_START = 5,
    PSYC_PARSE_ENTITY_CONT = 6,
    PSYC_PARSE_ENTITY_END = 7,
    PSYC_PARSE_ENTITY = 8,
    PSYC_PARSE_BODY_START = 9,
    PSYC_PARSE_BODY_CONT = 10,
    PSYC_PARSE_BODY_END = 11,
    PSYC_PARSE_BODY = 12,
    PSYC_PARSE_CONTENT_START = 9,
    PSYC_PARSE_CONTENT_CONT = 10,
    PSYC_PARSE_CONTENT_END = 11,
    PSYC_PARSE_CONTENT = 12,
    PSYC_PARSE_COMPLETE = 13,
} PsycParseRC;
typedef enum {
    PSYC_PART_RESET = -1,
    PSYC_PART_ROUTING = 0,
    PSYC_PART_LENGTH = 1,
    PSYC_PART_CONTENT = 2,
    PSYC_PART_METHOD = 3,
    PSYC_PART_DATA = 4,
    PSYC_PART_END = 5,
} PsycPart;
typedef enum {
    PSYC_PARSE_LIST_ERROR_ELEM_NO_LEN = -6,
    PSYC_PARSE_LIST_ERROR_ELEM_LENGTH = -5,
    PSYC_PARSE_LIST_ERROR_ELEM_TYPE = -4,
    PSYC_PARSE_LIST_ERROR_ELEM_START = -3,
    PSYC_PARSE_LIST_ERROR_TYPE = -2,
    PSYC_PARSE_LIST_ERROR = -1,
    PSYC_PARSE_LIST_INSUFFICIENT = 1,
    PSYC_PARSE_LIST_TYPE = 2,
    PSYC_PARSE_LIST_ELEM_START = 3,
    PSYC_PARSE_LIST_ELEM_CONT = 4,
    PSYC_PARSE_LIST_ELEM_END = 5,
    PSYC_PARSE_LIST_ELEM = 6,
    PSYC_PARSE_LIST_ELEM_LAST = 7,
    PSYC_PARSE_LIST_END = 8,
} PsycParseListRC;
typedef enum {
    PSYC_LIST_PART_START = 0,
    PSYC_LIST_PART_TYPE = 1,
    PSYC_LIST_PART_ELEM_START = 2,
    PSYC_LIST_PART_ELEM_TYPE = 3,
    PSYC_LIST_PART_ELEM_LENGTH = 4,
    PSYC_LIST_PART_ELEM = 5,
} PsycListPart;
typedef enum {
    PSYC_PARSE_DICT_ERROR_VALUE = -9,
    PSYC_PARSE_DICT_ERROR_VALUE_LENGTH = -8,
    PSYC_PARSE_DICT_ERROR_VALUE_TYPE = -7,
    PSYC_PARSE_DICT_ERROR_VALUE_START = -6,
    PSYC_PARSE_DICT_ERROR_KEY = -5,
    PSYC_PARSE_DICT_ERROR_KEY_LENGTH = -4,
    PSYC_PARSE_DICT_ERROR_KEY_START = -3,
    PSYC_PARSE_DICT_ERROR_TYPE = -2,
    PSYC_PARSE_DICT_ERROR = -1,
    PSYC_PARSE_DICT_INSUFFICIENT = 1,
    PSYC_PARSE_DICT_TYPE = 2,
    PSYC_PARSE_DICT_KEY_START = 3,
    PSYC_PARSE_DICT_KEY_CONT = 4,
    PSYC_PARSE_DICT_KEY_END = 5,
    PSYC_PARSE_DICT_KEY = 6,
    PSYC_PARSE_DICT_VALUE_START = 7,
    PSYC_PARSE_DICT_VALUE_CONT = 8,
    PSYC_PARSE_DICT_VALUE_END = 9,
    PSYC_PARSE_DICT_VALUE = 10,
    PSYC_PARSE_DICT_VALUE_LAST = 11,
    PSYC_PARSE_DICT_END = 12,
} PsycParseDictRC;
typedef enum {
    PSYC_DICT_PART_START = 0,
    PSYC_DICT_PART_TYPE = 1,
    PSYC_DICT_PART_KEY_START = 2,
    PSYC_DICT_PART_KEY_LENGTH = 3,
    PSYC_DICT_PART_KEY = 4,
    PSYC_DICT_PART_VALUE_START = 5,
    PSYC_DICT_PART_VALUE_TYPE = 6,
    PSYC_DICT_PART_VALUE_LENGTH = 7,
    PSYC_DICT_PART_VALUE = 8,
} PsycDictPart;
typedef enum {
    PSYC_PARSE_INDEX_ERROR_DICT = -6,
    PSYC_PARSE_INDEX_ERROR_DICT_LENGTH = -5,
    PSYC_PARSE_INDEX_ERROR_STRUCT = -4,
    PSYC_PARSE_INDEX_ERROR_LIST = -3,
    PSYC_PARSE_INDEX_ERROR_TYPE = -2,
    PSYC_PARSE_INDEX_ERROR = -1,
    PSYC_PARSE_INDEX_INSUFFICIENT = 1,
    PSYC_PARSE_INDEX_LIST = 3,
    PSYC_PARSE_INDEX_LIST_LAST = 4,
    PSYC_PARSE_INDEX_STRUCT = 5,
    PSYC_PARSE_INDEX_STRUCT_LAST = 6,
    PSYC_PARSE_INDEX_DICT_START = 7,
    PSYC_PARSE_INDEX_DICT_CONT = 8,
    PSYC_PARSE_INDEX_DICT_END = 9,
    PSYC_PARSE_INDEX_DICT = 10,
    PSYC_PARSE_INDEX_END = 11,
} PsycParseIndexRC;
typedef enum {
    PSYC_INDEX_PART_START = 0,
    PSYC_INDEX_PART_TYPE = 1,
    PSYC_INDEX_PART_LIST = 2,
    PSYC_INDEX_PART_STRUCT = 3,
    PSYC_INDEX_PART_DICT_LENGTH = 4,
    PSYC_INDEX_PART_DICT = 5,
} PsycIndexPart;
typedef enum {
    PSYC_PARSE_UPDATE_ERROR_VALUE = -24,
    PSYC_PARSE_UPDATE_ERROR_LENGTH = -23,
    PSYC_PARSE_UPDATE_ERROR_TYPE = -22,
    PSYC_PARSE_UPDATE_ERROR_OPER = -21,
    PSYC_PARSE_UPDATE_ERROR = -1,
    PSYC_PARSE_UPDATE_INSUFFICIENT = 1,
    PSYC_PARSE_UPDATE_INDEX_LIST = 3,
    PSYC_PARSE_UPDATE_INDEX_STRUCT = 5,
    PSYC_PARSE_UPDATE_INDEX_DICT_START = 7,
    PSYC_PARSE_UPDATE_INDEX_DICT_CONT = 8,
    PSYC_PARSE_UPDATE_INDEX_DICT_END = 9,
    PSYC_PARSE_UPDATE_INDEX_DICT = 10,
    PSYC_PARSE_UPDATE_TYPE = 21,
    PSYC_PARSE_UPDATE_TYPE_END = 22,
    PSYC_PARSE_UPDATE_VALUE_START = 23,
    PSYC_PARSE_UPDATE_VALUE_CONT = 24,
    PSYC_PARSE_UPDATE_VALUE_END = 25,
    PSYC_PARSE_UPDATE_VALUE = 26,
    PSYC_PARSE_UPDATE_END = 27,
} PsycParseUpdateRC;
typedef enum {
    PSYC_UPDATE_PART_START = 0,
    PSYC_UPDATE_INDEX_PART_TYPE = 1,
    PSYC_UPDATE_INDEX_PART_LIST = 2,
    PSYC_UPDATE_INDEX_PART_STRUCT = 3,
    PSYC_UPDATE_INDEX_PART_DICT_LENGTH = 4,
    PSYC_UPDATE_INDEX_PART_DICT = 5,
    PSYC_UPDATE_PART_TYPE = 12,
    PSYC_UPDATE_PART_LENGTH = 13,
    PSYC_UPDATE_PART_VALUE = 14,
} PsycUpdatePart;
typedef struct {
    PsycString buffer;		
    size_t cursor;		
    size_t startc;		
    size_t routinglen;		
    size_t contentlen;		
    size_t content_parsed;	
    size_t valuelen;		
    size_t value_parsed;	
    PsycPart part;		
    uint8_t flags;		
    uint8_t contentlen_found;	
    uint8_t valuelen_found;	
} PsycParseState;
typedef struct {
    PsycString buffer;		
    size_t cursor;		
    size_t startc;		
    PsycString type;		
    size_t elemlen;		
    size_t elem_parsed;		
    PsycListPart part;		
    uint8_t elemlen_found;	
} PsycParseListState;
typedef struct {
    PsycString buffer;		
    size_t cursor;		
    size_t startc;		
    size_t elemlen;		
    size_t elem_parsed;		
    PsycDictPart part;		
    uint8_t elemlen_found;	
} PsycParseDictState;
typedef struct {
    PsycString buffer;		
    size_t cursor;		
    size_t startc;		
    size_t elemlen;		
    size_t elem_parsed;		
    PsycIndexPart part;		
    uint8_t elemlen_found;	
} PsycParseIndexState;
typedef struct {
    PsycString buffer;		
    size_t cursor;		
    size_t startc;		
    size_t elemlen;		
    size_t elem_parsed;		
    PsycUpdatePart part;	
    uint8_t elemlen_found;	
} PsycParseUpdateState;
inline void
psyc_parse_state_init (PsycParseState *state, uint8_t flags)
{
    memset(state, 0, sizeof(PsycParseState));
    state->flags = flags;
    if (flags & PSYC_PARSE_START_AT_CONTENT)
	state->part = PSYC_PART_CONTENT;
}
inline void
psyc_parse_buffer_set (PsycParseState *state, const char *buffer, size_t length)
{
    state->buffer = (PsycString) {length, (char*)buffer};
    state->cursor = 0;
    if (state->flags & PSYC_PARSE_START_AT_CONTENT) {
	state->contentlen = length;
	state->contentlen_found = PSYC_TRUE;
    }
}
inline void
psyc_parse_list_state_init (PsycParseListState *state)
{
    memset(state, 0, sizeof(PsycParseListState));
}
inline void
psyc_parse_list_buffer_set (PsycParseListState *state,
			    const char *buffer, size_t length)
{
    state->buffer = (PsycString) {length, (char*)buffer};
    state->cursor = 0;
}
inline void
psyc_parse_dict_state_init (PsycParseDictState *state)
{
    memset(state, 0, sizeof(PsycParseDictState));
}
inline void
psyc_parse_dict_buffer_set (PsycParseDictState *state,
			     const char *buffer, size_t length)
{
    state->buffer = (PsycString) {length, (char*)buffer};
    state->cursor = 0;
}
inline void
psyc_parse_index_state_init (PsycParseIndexState *state)
{
    memset(state, 0, sizeof(PsycParseIndexState));
}
inline void
psyc_parse_index_buffer_set (PsycParseIndexState *state,
			     const char *buffer, size_t length)
{
    state->buffer = (PsycString) {length, (char*)buffer};
    state->cursor = 0;
}
inline void
psyc_parse_update_state_init (PsycParseUpdateState *state)
{
    memset(state, 0, sizeof(PsycParseUpdateState));
}
inline void
psyc_parse_update_buffer_set (PsycParseUpdateState *state,
			     const char *buffer, size_t length)
{
    state->buffer = (PsycString) {length, (char*)buffer};
    state->cursor = 0;
}
inline size_t
psyc_parse_content_length (PsycParseState *state)
{
    return state->contentlen;
}
inline PsycBool
psyc_parse_content_length_found (PsycParseState *state)
{
    return (PsycBool) state->contentlen_found;
}
inline size_t
psyc_parse_value_length (PsycParseState *state)
{
    return state->valuelen;
}
inline PsycBool
psyc_parse_value_length_found (PsycParseState *state)
{
    return (PsycBool) state->valuelen_found;
}
inline size_t
psyc_parse_cursor (PsycParseState *state)
{
    return state->cursor;
}
inline size_t
psyc_parse_buffer_length (PsycParseState *state)
{
    return state->buffer.length;
}
inline size_t
psyc_parse_remaining_length (PsycParseState *state)
{
    return state->buffer.length - state->cursor;
}
inline const char *
psyc_parse_remaining_buffer (PsycParseState *state)
{
    return state->buffer.data + state->cursor;
}
PsycParseRC
psyc_parse (PsycParseState *state, char *oper,
	    PsycString *name, PsycString *value);
PsycParseListRC
psyc_parse_list (PsycParseListState *state, PsycString *type, PsycString *elem);
PsycParseDictRC
psyc_parse_dict (PsycParseDictState *state, PsycString *type, PsycString *elem);
PsycParseIndexRC
psyc_parse_index (PsycParseIndexState *state, PsycString *idx);
PsycParseUpdateRC
psyc_parse_update (PsycParseUpdateState *state, char *oper, PsycString *value);
inline size_t
psyc_parse_uint (const char *value, size_t len, uint64_t *n)
{
    size_t c = 0;
    if (!value)
	return c;
    *n = 0;
    while (c < len && value[c] >= '0' && value[c] <= '9')
	*n = 10 * *n + (value[c++] - '0');
    return c;
}
inline size_t
psyc_parse_list_index (const char *value, size_t len, int64_t *n)
{
    if (!value || len == 0 || value[0] != '#')
	return 0;
    return psyc_parse_int(value + 1, len, n) + 1;
}
inline PsycBool
psyc_is_oper (char g)
{
    switch (g) {
    case ':':
    case '=':
    case '+':
    case '-':
    case '@':
    case '?':
    case '!':
	return PSYC_TRUE;
    default:
	return PSYC_FALSE;
    }
}
inline char
psyc_is_numeric (char c)
{
    return c >= '0' && c <= '9';
}
inline char
psyc_is_alpha (char c)
{
    return (c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z');
}
inline char
psyc_is_alpha_numeric (char c)
{
    return psyc_is_alpha(c) || psyc_is_numeric(c);
}
inline char
psyc_is_kw_char (char c)
{
    return psyc_is_alpha_numeric(c) || c == '_';
}
inline char
psyc_is_name_char (char c)
{
    return psyc_is_alpha(c) || (c >= '$' && c <= ';')
	|| c == '_' || c == '!' || c == '?' || c == '=' || c == '@' || c == '~';
}
inline char
psyc_is_host_char (char c)
{
    return psyc_is_alpha_numeric(c) || c == '.' || c == '-';
}
inline size_t
psyc_parse_keyword (const char *data, size_t len)
{
    size_t c = 0;
    while (c < len && psyc_is_kw_char(data[c++]));
    return c > 0 ? c - 1 : 0;
}